--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".InputActivity">
+        <activity
+            android:name=".InputActivity">
+        </activity>
+        <activity
+            android:name=".NewOperation"
+            android:label="@string/title_activity_new_operation"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
-        <activity
-            android:name=".ImportActivity"
-            android:label="@string/title_activity_import"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
