--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.DeviceDefault.Light">
         <activity android:name=".InputActivity"></activity>
         <activity
-            android:name=".NewOperation"
-            android:label="@string/title_activity_new_operation"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".NewOperation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
