--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".NewOperation" />
         <activity android:name=".List1" />
         <activity android:name=".MainMenuActivity" />
+        <activity android:name=".Youroperation" />
+
     </application>
 
 </manifest>
