--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="spreadsheet.exchangebook">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +23,7 @@
         <activity android:name=".List1" />
         <activity android:name=".MainMenuActivity" />
         <activity android:name=".Youroperation" />
-
+        <activity android:name=".HttpExampleActivity" />
     </application>
 
 </manifest>
